--- a/1/index.html
+++ b/1/index.html
@@ -12,6 +12,12 @@
 
 <body>
     <input type="button" value="Click to add new div tag" onclick="createDiv()" />
+    <script src="script.js"></script>
+
+    <div>
+        <p id="content" style="display:none;">Here is some small content!</p>
+    </div>
+
 </body>
 
 </html>
