--- a/2/index.html
+++ b/2/index.html
@@ -12,6 +12,7 @@
     <p>Please Input your Name:</p>
     <input type="text" name="name">
     <input id="buttonName" type="button" value="Click to set name" />
+    <script src="script.js"></script>
 </body>
 
 </html>
