--- a/3/index.html
+++ b/3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <script src="https://code.jquery.com/jquery-git.js"></script>
@@ -10,4 +10,24 @@
 <body>
     <input type="text" value="Input text here">
 </body>
+</html> -->
+
+<!-- The above might be from a different assignment???? -->
+
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="style.css">  
+<script src="https://code.jquery.com/jquery-git.js"></script>
+<script src="script.js"></script>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width">
+  <title>Change a CSS class name using jQuery.</title>
+  </head>
+  <body>
+  <p id="pid"  class="center">jQuery in action</p>
+  <input id="buttonClass" type="button" value="Click to change the Class" />
+</body>
+
 </html>
+CSS Code:
